@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CConsoleUpgradeDlg
+LastClass=CLastValuesPropDlg
 LastTemplate=CDialog
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "nxcon.h"
@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=188
 Resource1=IDD_CP_GENERAL (English (U.S.))
-Resource2=IDD_DISCOVERY_RANGES
+Resource2=IDD_DCI_SCHEDULE
 Resource3=IDD_DCI_DATA_EXPORT (English (U.S.))
-Resource4=IDA_DATA_VIEW
-Resource5=IDA_ALARM_BROWSER
+Resource4=IDD_ADDR_ENTRY
+Resource5=IDD_SUBMAP_BKGND
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_OBJECT_VPNC_GENERAL
+Resource6=IDD_CREATE_NODE
 Class11=CProgressDialog
-Resource7=IDD_EDIT_TRAP_ARG
+Resource7=IDD_DCI_COLLECTION
 Class12=CAddrEntryDlg
-Resource8=IDD_DISCOVERY_TARGETS
+Resource8=IDD_SAVE_AGENT_CFG
 Class13=CObjectPropDlg
 Resource9=IDD_THRESHOLD (English (U.S.))
 Resource10=IDD_SELECT_OBJECT (English (U.S.))
@@ -46,45 +46,45 @@ Resource17=IDD_NEW_USER (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_NEW_ACTION (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDD_SELECT_MP
+Resource20=IDD_NEW_OBJECT_TOOL
 Class17=CObjectPreview
 Resource21=IDA_OBJECT_BROWSER (English (U.S.))
 Class18=CToolBox
 Class19=CObjectInfoBox
 Class20=CObjectSearchBox
-Resource22=IDD_OBJECT_SECURITY
+Resource22=IDA_ALARM_BROWSER
 Class21=CEditBox
 Class22=COPGeneral
 Class23=CNodePropsGeneral
 Resource23=IDD_GRAPH_PROPERTIES (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDR_MAINFRAME
+Resource24=IDD_NEW_ACTION
 Class26=CRequestProcessingDlg
 Resource25=IDD_SELECT_USER (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_OBJECT_GENERAL
+Resource27=IDA_EPP
 Resource28=IDD_DCI_COLLECTION (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDR_MAINFRAME (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_SAVE_AGENT_CFG (English (U.S.))
-Resource31=IDD_SELECT_ACTION
-Resource32=IDD_ABOUTBOX
+Resource31=IDD_REQUEST_PROCESSING
+Resource32=IDD_SELECT_MP
 Class29=CUserSelectDlg
-Resource33=IDA_SERVER_CFG_EDITOR
+Resource33=IDD_AGENT_CONFIG
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDA_MDI_DEFAULT
-Resource36=IDD_OBJECT_CAPS
+Resource35=IDD_REMOVE_TEMPLATE
+Resource36=IDA_MDI_DEFAULT
 Class32=CUserPropDlg
 Resource37=IDD_EDIT_VARIABLE (English (U.S.))
-Resource38=IDD_OBJECT_NODE_GENERAL
+Resource38=IDR_MAINFRAME
 Class33=CGroupPropDlg
-Resource39=IDD_THRESHOLD
-Resource40=IDD_INPUT_BOX
-Resource41=IDD_OBJECT_PRESENTATION
+Resource39=IDA_SERVER_CFG_EDITOR
+Resource40=IDD_MIB_BROWSER
+Resource41=IDA_DATA_VIEW
 Resource42=IDA_ACTION_EDITOR (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -100,55 +100,55 @@ Class41=CGraphFrame
 Class42=CDCIThresholdsPage
 Resource46=IDA_OBJECT_TOOLS_EDITOR (English (U.S.))
 Resource47=IDM_CONTEXT (English (U.S.))
-Resource48=IDA_GRAPH
+Resource48=IDD_OBJECT_COND_DATA
 Class43=CThresholdDlg
 Resource49=IDD_DESKTOP_SAVE_AS (English (U.S.))
-Resource50=IDD_SAVE_AGENT_CFG
+Resource50=IDD_CREATE_TG
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDD_SELECT_AGENT_PARAM (English (U.S.))
-Resource52=IDD_EDIT_VARIABLE
+Resource52=IDD_OBJTOOL_COLUMNS
 Class48=CObjectSelDlg
-Resource53=IDA_PACKAGE_MGR
-Resource54=IDD_SUBMAP_BKGND
+Resource53=IDD_ADD_DCI
+Resource54=IDD_OBJECT_NODE_POLL
 Class49=CRuleCommentDlg
-Resource55=IDD_CP_GENERAL
+Resource55=IDD_EDIT_EVENT
 Class50=CEventSelDlg
-Resource56=IDD_OBJECT_COND_SCRIPT
+Resource56=IDD_GRAPH_PROP_DATA
 Resource57=IDA_EPP (English (U.S.))
-Resource58=IDD_DCI_SCHEDULE
+Resource58=IDD_CREATE_TEMPLATE
 Resource59=IDA_PACKAGE_MGR (English (U.S.))
 Resource60=IDD_OBJTOOL_GENERAL (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_CREATE_TEMPLATE (English (U.S.))
-Resource62=IDA_DC_EDITOR
+Resource62=IDD_DISCOVERY_GENERAL
 Class52=CRuleSeverityDlg
-Resource63=IDD_DCI_THRESHOLDS
+Resource63=IDA_LAST_VALUES
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDA_MDI_DEFAULT (English (U.S.))
-Resource65=IDD_CREATE_VPNC
+Resource65=IDD_CREATE_CONTAINER
 Resource66=IDD_EDIT_IP_SUBNET (English (U.S.))
 Resource67=IDD_EDIT_RULE_SEVERITY (English (U.S.))
 Resource68=IDD_ACTION_PROPERTIES (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDD_OBJECT_STATUS
-Resource70=IDD_NEW_OBJECT_TOOL
+Resource69=IDD_OBJECT_COND_SCRIPT
+Resource70=IDD_EDIT_TRAP_ARG
 Class57=CNewActionDlg
-Resource71=IDD_LASTVAL_PROP
+Resource71=IDD_CHANGE_IP
 Class58=CEditActionDlg
-Resource72=IDD_OBJECT_COND_GENERAL
+Resource72=IDD_GRAPH_PROP_SETTINGS
 Class59=CActionSelDlg
-Resource73=IDD_EDIT_IP_SUBNET
+Resource73=IDD_DCI_TRANSFORM
 Resource74=IDD_EDIT_TRAP (English (U.S.))
 Resource75=IDD_USER_PROPERTIES (English (U.S.))
-Resource76=IDD_GRAPH_PROP_DATA
+Resource76=IDD_CP_GENERAL
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDA_AGENT_CFG_EDITOR
+Resource77=IDD_EDIT_RULE_SCRIPT
 Class62=CCreateNodeDlg
 Resource78=IDD_OBJECT_NODE_GENERAL (English (U.S.))
 Resource79=IDT_MAP (English (U.S.))
@@ -158,31 +158,31 @@ Resource81=IDD_LASTVAL_PROP (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_DCI_COLLECTION
-Resource84=IDA_OBJECT_BROWSER
+Resource83=IDA_PACKAGE_MGR
+Resource84=IDD_SELECT_ACTION
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_OBJTOOL_GENERAL
-Resource86=IDD_EDIT_RULE_ALARM
+Resource85=IDD_EDIT_TRAP
+Resource86=IDD_ABOUTBOX
 Class68=CTrapEditor
-Resource87=IDD_ADDR_ENTRY
-Resource88=IDD_AGENT_CONFIG
-Resource89=IDD_CHANGE_PASSWORD
+Resource87=IDD_OBJECT_STATUS
+Resource88=IDD_CREATE_VPNC
+Resource89=IDD_OBJECT_RELATIONS
 Class69=CDataQueryDlg
-Resource90=IDD_CREATE_CONDITION
+Resource90=IDD_DESKTOP_SAVE_AS
 Class70=CTrapEditDlg
 Resource91=IDM_VIEW_SPECIFIC (English (U.S.))
 Class71=CTrapParamDlg
-Resource92=IDD_SNMP_WALK
-Resource93=IDD_DESKTOP_SAVE_AS
+Resource92=IDD_OBJECT_NETSRV_GENERAL
+Resource93=IDD_EDIT_RULE_SEVERITY
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_EDIT_RULE_SCRIPT
+Resource94=IDD_OBJECT_VPNC_GENERAL
 Resource95=IDA_SCRIPT_MANAGER (English (U.S.))
 Resource96=IDD_SET_PASSWORD (English (U.S.))
 Resource97=IDD_DCI_TRANSFORM (English (U.S.))
-Resource98=IDD_CREATE_CONTAINER
+Resource98=IDD_OBJECT_GENERAL
 Resource99=IDD_OBJECT_NETSRV_GENERAL (English (U.S.))
 Resource100=IDD_OBJTOOL_OPTIONS (English (U.S.))
 Resource101=IDA_LAST_VALUES (English (U.S.))
@@ -244,7 +244,7 @@ Class102=CWaitView
 Class103=CWebBrowser
 Class104=CSyslogBrowser
 Class105=CLPPList
-Resource129=IDD_CREATE_MP
+Resource129=IDD_OBJTOOL_GENERAL
 Class106=CDCISchedulePage
 Resource130=IDD_OBJECT_CAPS (English (U.S.))
 Class107=CObjectPropsStatus
@@ -270,78 +270,78 @@ Class119=CMapControlBox
 Resource138=IDD_OBJECT_GENERAL (English (U.S.))
 Class120=CSubmapBkgndDlg
 Resource139=IDD_SUBMAP_BKGND (English (U.S.))
-Resource140=IDD_SELECT_AGENT_PARAM
-Resource141=IDD_NEW_ACTION
-Resource142=IDA_ACTION_EDITOR
-Resource143=IDM_VIEW_SPECIFIC
-Resource144=IDD_NEW_USER
-Resource145=IDD_EDIT_EVENT
-Resource146=IDD_OBJECT_NETSRV_GENERAL
-Resource147=IDD_GRAPH_PROP_SETTINGS
-Resource148=IDD_DISCOVERY_GENERAL
-Resource149=IDD_OBJECT_RELATIONS
-Resource150=IDD_CREATE_TG
-Resource151=IDD_DATA_QUERY
-Resource152=IDD_DCI_DATA_EXPORT
-Resource153=IDA_LAST_VALUES
-Resource154=IDD_REMOVE_TEMPLATE
-Resource155=IDA_EPP
-Resource156=IDD_EDIT_RULE_COMMENT
-Resource157=IDD_OBJECT_NODE_POLL
-Resource158=IDD_CREATE_NODE
-Resource159=IDM_CONTEXT
-Resource160=IDA_EVENT_EDITOR
-Resource161=IDD_OBJTOOL_OPTIONS
-Resource162=IDD_CREATE_TEMPLATE
-Resource163=IDD_OBJECT_COND_DATA
-Resource164=IDD_SET_PASSWORD
-Resource165=IDD_GROUP_PROPERTIES
-Resource166=IDD_SELECT_OBJECT
-Resource167=IDD_ADD_DCI
-Resource168=IDD_ACTION_PROPERTIES
-Resource169=IDD_SELECT_INTERNAL_ITEM
-Resource170=IDA_TRAP_EDITOR
-Resource171=IDD_CREATE_NETSRV
+Resource140=IDD_THRESHOLD
+Resource141=IDD_OBJECT_NODE_GENERAL
+Resource142=IDD_OBJECT_COND_GENERAL
+Resource143=IDM_CONTEXT
+Resource144=IDA_EVENT_EDITOR
+Resource145=IDD_SELECT_TRAP
+Resource146=IDD_EDIT_RULE_COMMENT
+Resource147=IDD_EDIT_RULE_ALARM
+Resource148=IDD_EDIT_IP_SUBNET
+Resource149=IDD_OBJECT_PRESENTATION
+Resource150=IDD_NEW_USER
+Resource151=IDD_GROUP_PROPERTIES
+Resource152=IDD_ACTION_PROPERTIES
+Resource153=IDD_COND_DCI_PROP
+Resource154=IDD_INPUT_BOX
+Resource155=IDD_SNMP_WALK
+Resource156=IDA_OBJECT_TOOLS_EDITOR
+Resource157=IDD_SELECT_EVENT
+Resource158=IDD_OBJECT_SECURITY
+Resource159=IDM_VIEW_SPECIFIC
+Resource160=IDD_CREATE_CONDITION
+Resource161=IDD_SELECT_INTERNAL_ITEM
+Resource162=IDD_USER_PROPERTIES
+Resource163=IDD_LASTVAL_PROP
+Resource164=IDA_GRAPH
+Resource165=IDA_TRAP_EDITOR
+Resource166=IDA_DC_EDITOR
+Resource167=IDD_DCI_DATA_EXPORT
+Resource168=IDD_OBJECT_CAPS
+Resource169=IDD_DCI_THRESHOLDS
+Resource170=IDD_DATA_QUERY
+Resource171=IDD_SELECT_OBJECT
 Class121=CModuleManager
 Class122=CDesktopManager
-Resource172=IDD_CHANGE_IP
-Resource173=IDD_EDIT_RULE_SEVERITY
+Resource172=IDD_SELECT_AGENT_PARAM
+Resource173=IDA_AGENT_CONFIG_MANAGER
 Class123=CCreateCondDlg
 Class124=CCondPropsGeneral
 Class125=CCondPropsScript
 Class126=CCondPropsData
-Resource174=IDA_OBJECT_TOOLS_EDITOR
+Resource174=IDD_DISCOVERY_TARGETS
 Class127=CAddDCIDlg
-Resource175=IDD_EDIT_TRAP
+Resource175=IDD_SET_PASSWORD
 Class128=CCondDCIPropDlg
-Resource176=IDD_DCI_TRANSFORM
+Resource176=IDD_SELECT_USER
 Class129=CAgentConfigMgr
-Resource177=IDD_SELECT_TRAP
-Resource178=IDD_USER_PROPERTIES
+Resource177=IDD_OBJTOOL_OPTIONS
+Resource178=IDA_ACTION_EDITOR
 Class130=CAgentCfgDlg
 Class131=CObjectCommentsEditor
-Resource179=IDD_SELECT_USER
+Resource179=IDA_NETMAP
 Class132=CRuleScriptDlg
 Class133=CDetailsView
-Resource180=IDD_SELECT_EVENT
+Resource180=IDA_SCRIPT_MANAGER
 Class134=CDiscoveryPropGeneral
-Resource181=IDA_NETMAP
+Resource181=IDD_CHANGE_PASSWORD
 Class135=CDiscoveryPropTargets
-Resource182=IDD_MIB_BROWSER
+Resource182=IDA_AGENT_CFG_EDITOR
 Class136=CDiscoveryPropAddrList
-Resource183=IDD_OBJTOOL_COLUMNS
+Resource183=IDD_CREATE_NETSRV
 Class138=CObjectView
 Class139=CObjectOverview
 Class140=CAlarmView
 Class141=CObjectDepView
-Resource184=IDD_COND_DCI_PROP
+Resource184=IDD_EDIT_VARIABLE
 Class137=CObjectBrowser
 Class142=CCreateMPDlg
-Resource185=IDA_AGENT_CONFIG_MANAGER
+Resource185=IDD_CREATE_MP
 Class143=CSelectMPDlg
-Resource186=IDA_SCRIPT_MANAGER
+Resource186=IDD_DISCOVERY_RANGES
 Class144=CTrapSelDlg
-Resource187=IDD_REQUEST_PROCESSING
+Resource187=IDA_OBJECT_BROWSER
 Class145=CConsoleUpgradeDlg
 Resource188=IDD_UPGRADE
 
@@ -4437,14 +4437,15 @@ Control3=IDC_BUTTON_DELETE,button,1342242816
 [DLG:IDD_LASTVAL_PROP]
 Type=1
 Class=CLastValuesPropDlg
-ControlCount=7
+ControlCount=8
 Control1=IDC_CHECK_REFRESH,button,1342242819
 Control2=IDC_EDIT_TIME,edit,1350639744
 Control3=IDC_CHECK_GRID,button,1342242819
-Control4=IDOK,button,1342242817
-Control5=IDCANCEL,button,1342242816
-Control6=IDC_STATIC_REFRESH,static,1342308352
-Control7=IDC_STATIC_SEC,static,1342308352
+Control4=IDC_CHECK_HIDE_EMPTY,button,1342242819
+Control5=IDOK,button,1342242817
+Control6=IDCANCEL,button,1342242816
+Control7=IDC_STATIC_REFRESH,static,1342308352
+Control8=IDC_STATIC_SEC,static,1342308352
 
 [DLG:IDD_DCI_DATA_EXPORT]
 Type=1
