@@ -2180,7 +2180,7 @@ BEGIN
     PUSHBUTTON      "&Delete",IDC_BUTTON_DELETE,240,25,50,14
 END
 
-IDD_LASTVAL_PROP DIALOG DISCARDABLE  0, 0, 192, 55
+IDD_LASTVAL_PROP DIALOG DISCARDABLE  0, 0, 192, 70
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Properties"
 FONT 8, "MS Sans Serif"
@@ -2189,7 +2189,9 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,7,83,10
     EDITTEXT        IDC_EDIT_TIME,64,19,32,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "Show &grid",IDC_CHECK_GRID,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,7,38,47,10
+                    WS_TABSTOP,7,39,47,10
+    CONTROL         "&Hide empty values",IDC_CHECK_HIDE_EMPTY,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,7,53,74,10
     DEFPUSHBUTTON   "OK",IDOK,135,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,135,24,50,14
     LTEXT           "Refresh interval:",IDC_STATIC_REFRESH,7,22,52,8
@@ -3269,7 +3271,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 185
         TOPMARGIN, 7
-        BOTTOMMARGIN, 48
+        BOTTOMMARGIN, 63
     END
 
     IDD_DCI_DATA_EXPORT, DIALOG
